// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyStateWithGraphic default 1`] = `
<div
  data-cy="emptyStateWithGraphic"
>
  <div
    class="css-1534o5d"
    data-cy="spacingBox"
  >
    <img
      alt=""
      class="css-1jv97ae"
      role="presentation"
      src="http://placehold.it/350x150"
    />
  </div>
  <div
    class="css-v5n8zn"
    data-cy="spacingBox"
  >
    <div
      class="css-ilu7d6"
      data-cy="spacingBox"
    >
      <h2
        class="css-sg507t"
        data-cy="headingText2"
      >
        Heading
      </h2>
    </div>
    <div
      class="css-1j4gpfm"
    >
      Body content
    </div>
  </div>
</div>
`;

exports[`EmptyStateWithGraphic renders with primary and secondary actions 1`] = `
<div
  data-cy="emptyStateWithGraphic"
>
  <div
    class="css-1534o5d"
    data-cy="spacingBox"
  >
    <img
      alt=""
      class="css-1jv97ae"
      role="presentation"
      src="http://placehold.it/350x150"
    />
  </div>
  <div
    class="css-1534o5d"
    data-cy="spacingBox"
  >
    <div
      class="css-ilu7d6"
      data-cy="spacingBox"
    >
      <h2
        class="css-sg507t"
        data-cy="headingText2"
      >
        Heading
      </h2>
    </div>
    <div
      class="css-1j4gpfm"
    >
      Body content
    </div>
  </div>
  <div
    class="css-1m9h7kz"
    data-cy="flex"
  >
    <div
      class="css-149ndna"
      data-cy="flexItem"
    >
      <button
        class="css-8g34zf"
        data-cy="secondaryButton"
        tabindex="0"
        type="button"
      >
        <span
          class=""
        >
          Secondary
        </span>
      </button>
    </div>
    <div
      class="css-149ndna"
      data-cy="flexItem"
    >
      <button
        class="css-1jip74i"
        data-cy="primaryButton"
        tabindex="0"
        type="button"
      >
        <span
          class=""
        >
          Primary
        </span>
      </button>
    </div>
  </div>
</div>
`;
